--- a/layouts/page-resource/single.html
+++ b/layouts/page-resource/single.html
@@ -31,7 +31,7 @@
       {{ $.Scratch.Add "count" 1 }}
       <div class="">
         <label for="light-box-{{($.Scratch.Get "count")}}" class="">
-        <figure class="relative mt5 mh0 dim">
+        <figure class="relative mt4 mt5-ns mh0 dim">
           <img src="{{.Permalink}}" class="db">
           <figcaption class="acenter f7 fw6 tracked lh-title ttu tc">2018<br>Caption Of Picture<br><span class="black-50">&copy;R. W. Boyer</span></figcaption>
         </figure>
@@ -60,7 +60,7 @@
       {{ $.Scratch.Add "count" 1 }}
       <div class="">
         <label for="light-box-{{($.Scratch.Get "count")}}" class="">
-        <figure class="relative mt5 mh0 dim">
+        <figure class="relative mt4 mt5-ns mh0 dim">
           <img src="{{.Permalink}}" class="db">
           <figcaption class="acenter f7 fw6 tracked lh-title ttu tc">2018<br>Caption Of Picture<br><span class="black-50">&copy;R. W. Boyer</span></figcaption>
         </figure>
