--- a/layouts/page-resource/single.html
+++ b/layouts/page-resource/single.html
@@ -11,8 +11,8 @@
       <h3 class="mt0 mb4 f3 fw6 tracked lh-solid ttu"><span class="tracked-tight fw2">Inside </span>Chanel</h3>
       {{ partial "nav" . }}
     </article>
-    <article class="w-100 w-70-ns flex justify-center items-center">
-      <header class="lh-title tc">
+    <article class="w-100 w-70-ns flex justify-center items-end">
+      <header class="mb4 mb6-ns lh-title tc">
         <h2 class="mv0 f2 fw3 tracked-tight ttu">Chapter 1</h2>
         <h1 class="mv0 f1 fw5 tracked ttu">Marilyn And &numero;5</h1>
       </header>
