--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,4 +1,4 @@
-<ol class="pl3 mv0 f7 fw6 tracked ttu white-40">
+<ol class="pl3 mv0 f7 fw6 tracked ttu ">
   <li class="ma0">Item 1</li>
   <li class="ma0">Item 2</li>
   <li class="ma0">Item 3</li>
