structure changes for real site

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,11 +7,8 @@
     new WOW().init();
   </script>
   <div class="bg-white">
-  <section class="vh-100 overflow-hidden flex justify-end bg-cover bg-top white" style="background-image: url(/images/099A7733.jpg)">
-    <aside class="fixed top-0 left-0 z-999 w-30 pa4 bm-ex">
-      <h3 class="mt0 mb4 f3 fw6 tracked lh-solid ttu"><span class="tracked-tight fw2">Canned </span>OX</h3>
-      {{ partial "nav" . }}
-    </aside>
+  <section class="vh-100 overflow-hidden flex justify-end bg-cover bg-top bg-black white">
+    {{ partial "nav" . }}
     <article class="w-70 flex justify-center items-end mb6">
       <header class="lh-title tc">
         <h2 class="mv0 f2 fw3 tracked-tight ttu">Chapter 1</h2>
