--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -1,103 +1,126 @@
+{{ define "header" }}
+  <div class="dn"></div>
+{{ end }}
+
 {{ define "main" }}
-
-<script type="text/javascript" charset="utf-8">
-  $(function () {
-    $('#maximage').maximage({
-      cycleOptions: {
-            speed: 800,
-            timeout: 2000
-        },
-      onFirstImageLoaded: function(){
-            jQuery('#cycle-loader').hide();
-            jQuery('#maximage').fadeIn('fast');
-        },
-      fillElement: '#holder'
-    });
-  });
-</script>
-
-<section id="holder" class="relative">
-  <div id="maximage" class="flex relative w-50 overflow-hidden items-center justify-center vh-100 center">
-    {{ range .Params.slides }}
-    <img src="{{.}}" class="bg-top">
-    {{ end }}
-  </div>
-</section>
-
-<div id="reader" class="o-0 fixed w-100 vh-100 top-0 left-0 bottom-0 right-0 {{ .Params.readerbg }}"></div>
-
-<section class="relative mw9 ph4 ph5-ns pv4-ns center">
-  {{ if isset .Params "sideline" }}
-    {{ partial "sideline" (dict "sideline" .Params.sideline (cond (isset .Params "sidecolor") "sidecolor" "") .Params.sidecolor) }}
-  {{ end }}
-  <div class="flex flex-wrap-reverse justify-between {{with .Params.textcolor}}{{.}}{{end}}">
-  <article class="mv0 w-100 w-70-ns">
-    <header class="lh-title">
-      <div class="vh-100 w-100"></div>
-      <h1 class="mt2 mb2 f1 fw3">{{ .Title | plainify }}</h1>
-      <h2 class="mt0 mb4 f3 fw1">{{ .Params.subtitle | safeHTML }}</h2>
-    </header>
-    <div id="copy" class="content measure mb5">
-      {{ .Content }}
-    </div>
-  </article>
-  <aside class="w-100 w-30-ns mb4 mb0-ns lh-solid tr">
-    <time class="f-subheadline fw3 tr"><span class="f2">{{ dateFormat "2006" .Date }}</span><br>{{ dateFormat "01" .Date }}<span class="fw7">{{ dateFormat "02" .Date }}</span></time>
-    {{ with .Params.studio }}
-    {{ partial "slab-stat-studio" . }}
-    {{ end }}
-  </aside>
-  </div>
-</section>
-<section class="relative bg-black-50">
-  <div class="cf mw8 pv4 ph2 ph0-ns center">
-    {{ range .Params.slides }}
-    <a href="{{.}}" class="fl gallery w-33 w-10-ns dib pa2" >
-        <div class="aspect-ratio--1x1 cover" style="background:url({{.}}) center;">
-        </div>
-    </a>
-    {{ end }}
-  </div>  
-  <script>
-    $(function() {
-      $('a.gallery').featherlightGallery({
-        previousIcon: '&#9664;',     /* Code that is used as previous icon */
-        nextIcon: '&#9654;',         /* Code that is used as next icon */
-        galleryFadeIn: 100,          /* fadeIn speed when slide is loaded */
-        galleryFadeOut: 300          /* fadeOut speed before slide is loaded */
-      });
-    });
+  <script type="text/javascript">
+    new WOW().init();
   </script>
-</section>
+  <div class="bg-white">
+  <section class="vh-100 overflow-hidden flex justify-end flex-wrap bg-cover bg-top white" style="background-image: url(/images/099A7733.jpg);">
+    {{ partial "nav" . }}
+    <article class="w-100 w-70-ns flex justify-center items-end">
+      <header class="mb4 mb6-ns lh-title tc">
+        <h2 class="mv0 f2 fw3 tracked-tight ttu">Chapter 1</h2>
+        <h1 class="mv0 f1 fw5 tracked ttu">Marilyn And &numero;5</h1>
+      </header>
+    </article>
+  </section>
 
+  <input type="checkbox" id="light-box" class="dn">
+
+  <section class="flex flex-wrap mw8 center mb5">
+    <aside class="w-100 w-25-ns"></aside>
+    <article class="flex flex-wrap w-100 w-75-ns">
+      {{ with .Resources.Match "images-left/*" }}
+      <div class="flex flex-column w-60 pr4">
+      {{ $.Scratch.Set "count" 0 }}
+      {{ range . }}
+      {{ $.Scratch.Add "count" 1 }}
+      <div class="">
+        <label for="light-box-{{($.Scratch.Get "count")}}" class="">
+        <figure class="relative mt4 mt5-ns mh0 dim">
+          <img src="{{.Permalink}}" alt="{{.Title}}" class="db">
+          {{ $.Scratch.Set "title" .Title }}
+          {{ with .Params }}
+          <figcaption class="acenter f7 fw6 tracked lh-title ttu tc">{{($.Scratch.Get "title")}}<br>{{.caption}}<br><span class="black-50">{{ .copy | safeHTML }}</span></figcaption>
+          {{ end }}
+        </figure>
+        </label>    
+      </div>
+      <style>
+      #light-box-{{($.Scratch.Get "count")}}:checked~#light-box-slide-{{($.Scratch.Get "count")}}{
+          top: 0;
+      }
+      </style>
+      <input type="checkbox" id="light-box-{{($.Scratch.Get "count")}}" class="dn">
+      <section id="light-box-slide-{{($.Scratch.Get "count")}}" class="z-999 fixed flex justify-center top-100 left-0 h-100 w-100 overflow-hidden bg-white trans-all">
+        <figure class="mt5 mh2 mh6-ns">
+          <img src="{{.Permalink}}" class="db center mxhi-75">
+          {{ $.Scratch.Set "title" .Title }}
+          {{ with .Params }}
+          <figcaption class="mt4 f7 fw5 tracked lh-title ttu tc">{{($.Scratch.Get "title")}}<br>{{.caption}}<br><span class="black-50">{{ .copy | safeHTML }}</span></figcaption>
+          {{ end }}
+        </figure>
+        <label for="light-box-{{($.Scratch.Get "count")}}" class="close z-5 absolute top-0 right-0 ma4"></label>
+      </section>
+      {{ end }}
+      </div>
+      {{ end }}
+      {{ with .Resources.Match "images-right/*" }}
+      <div class="flex flex-column w-40">
+      {{/* $.Scratch.Set "count" 0 */}}
+      {{ range . }}
+      {{ $.Scratch.Add "count" 1 }}
+      <div class="">
+        <label for="light-box-{{($.Scratch.Get "count")}}" class="">
+        <figure class="relative mt4 mt5-ns mh0 dim">
+          <img src="{{.Permalink}}" class="db">
+          {{ $.Scratch.Set "title" .Title }}
+          {{ with .Params }}
+          <figcaption class="acenter f7 fw6 tracked lh-title ttu tc">{{($.Scratch.Get "title")}}<br>{{.caption}}<br><span class="black-50">{{ .copy | safeHTML }}</span></figcaption>
+          {{ end }}
+        </figure>
+        </label>    
+      </div>
+      <style>
+      #light-box-{{($.Scratch.Get "count")}}:checked~#light-box-slide-{{($.Scratch.Get "count")}}{
+          top: 0;
+      }
+      </style>
+      <input type="checkbox" id="light-box-{{($.Scratch.Get "count")}}" class="dn">
+      <section id="light-box-slide-{{($.Scratch.Get "count")}}" class="z-999 fixed flex justify-center top-100 left-0 h-100 w-100 overflow-hidden bg-white trans-all">
+        <figure class="mt5 mh2 mh6-ns">
+          <img src="{{.Permalink}}" class="db center mxhi-75">
+          {{ $.Scratch.Set "title" .Title }}
+          {{ with .Params }}
+          <figcaption class="mt4 f7 fw5 tracked lh-title ttu tc">{{($.Scratch.Get "title")}}<br>{{.caption}}<br><span class="black-50">{{ .copy | safeHTML }}</span></figcaption>
+          {{ end }}
+        </figure>
+        <label for="light-box-{{($.Scratch.Get "count")}}" class="close z-5 absolute top-0 right-0 ma4"></label>
+      </section>
+      {{ end }}
+      </div>
+      {{ end }}
+    </article>
+  </section>
+
+  <section id="light-box-slide" class="fixed flex justify-center top-100 left-0 h-100 w-100 overflow-hidden bg-white trans-all">
+    <figure class="mt5 mh6">
+      <img src="/images/099A0941.jpg" class="db center mxhi-75">
+      <figcaption class="mt4 f7 fw5 tracked lh-title ttu tc">2018<br>Caption Of Picture<br><span class="black-50">&copy;R. W. Boyer</span></figcaption>
+    </figure>
+    <label for="light-box" class="close z-5 absolute top-0 right-0 ma4"></label>
+  </section>
+
+  {{ with .Resources.ByType "image" }}
+  <ul class="">
+  {{ range . }}
+  <li><a href="{{ .RelPermalink }}">{{ .ResourceType | title }}</a></li>
+  {{ end }}
+  </ul>
+  {{ end }}
+  
+  {{ with .Resources.ByType "page" }}
+  <ul class="">
+  {{ range . }}
+  <li><a href="{{ .RelPermalink }}">{{ .Title }}</a><p>{{.Content}}</p></li>
+  {{ end }}
+  </ul>
+  {{ end }}  
+  </div>
 {{ end }}
 
 {{ define "footer" }}
-  {{ partial "footer-black" . }}
-	<script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript" charset="utf-8"></script>
-
-  {{ if isset .Params "readerbg" }}
-  <script> 
-  $.fn.isInViewport = function() {
-    var elementTop = $(this).offset().top;
-    var elementBottom = elementTop + $(this).outerHeight();
-
-    var viewportTop = $(window).scrollTop();
-    var viewportBottom = viewportTop + $(window).height();
-
-    return elementBottom > viewportTop && elementTop < viewportBottom;
-  };
-
-  $(window).on('resize scroll', function() {
-    $('#copy').each(function() {
-      if ($(this).isInViewport()) {
-        $("#reader").removeClass("o-0");
-      } else {
-        $("#reader").addClass("o-0");
-      }
-    });
-  });
-  </script>
-  {{ end }} 
+  <div class="dn"></div>
 {{ end }}
