--- a/layouts/partials/open-graph.html
+++ b/layouts/partials/open-graph.html
@@ -2,6 +2,10 @@
 <meta property="og:description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end }}" />
 <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}" />
 <meta property="og:url" content="{{ .Permalink }}" />
-<meta property="og:image" content="{{ with .Params.image }}{{ . | absURL }}{{ else }}{{ with .Site.Params.image }}{{ .url | absURL }}{{ end }}{{ end }}" />
+{{ if isset .Params "image"}}
+<meta property="og:image" content="{{ with $.Page.Resources.GetMatch (.Params.image) }}{{ .Permalink }}{{ end }}" />
+{{ else }}
+<meta property="og:image" content="{{ with $.Site.Params }}{{ .image | absURL }}{{ end }}" />
+{{ end }}
 {{ with .Site.Language }}<meta property="og:locale" content="{{ .Lang }}" />{{ end }}
 {{ with .Site.Params.facebook.appid }}<meta property="fb:app_id" content="{{ . }}" />{{ end }}
