--- a/layouts/partials/twitter-card.html
+++ b/layouts/partials/twitter-card.html
@@ -1,21 +1,11 @@
 <meta name="twitter:title" content="{{ .Title | plainify }}"/>
 <meta name="twitter:description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end -}}"/>
 {{ if .IsHome -}}
-  {{ if ge .Site.Params.image.width 300 -}}
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="{{ .Site.Params.image.url | absURL }}"/>
-  {{- else -}}
-<meta name="twitter:card" content="summary"/>
-<meta name="twitter:image" content="{{ with .Site.Params.image }}{{ .url | absURL }}{{ else }}{{ with .Site.Params.logo }}{{ .url | absURL }}{{ end }}{{ end }}" />
-  {{- end }}
+  <meta name="twitter:card" content="summary"/>
+  <meta name="twitter:image" content="{{ with .Params.image }}{{ . | absURL }}{{ else }}{{ with $.Site.Params.image }}{{ . | absURL }}{{ end }}{{ end }}" />
 {{- else -}}
-  {{ if ge (.Param "lua.image.width") 300 -}}
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="{{ .Param "lua.image.url" | absURL }}"/>
-  {{- else -}}
-<meta name="twitter:card" content="summary"/>
-<meta name="twitter:image" content="{{ with .Params.image }}{{ . | absURL }}{{ else }}{{ with .Site.Params.image }}{{ .url | absURL }}{{ end }}{{ end }}" />
-  {{- end }}
+  <meta name="twitter:card" content="summary"/>
+  <meta name="twitter:image" content="{{ with .Params.image }}{{ . | absURL }}{{ else }}{{ with $.Site.Params.image }}{{ .| absURL }}{{ end }}{{ end }}" />
 {{- end }}
 {{ with .Site.Params.twitter -}}
 <meta name="twitter:site" content="@{{ .username }}"/>
