--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,7 +12,7 @@
   {{ end }}
 
   {{ block "footer" . }}
-    {{ partial "footer-black" . }}
+    {{ partial "footer" . }}
   {{ end }}
 
   </div>
