pair down images

--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -48,7 +48,7 @@
       </style>
       <input type="checkbox" id="light-box-{{($.Scratch.Get "count")}}" class="dn">
       <section id="light-box-slide-{{($.Scratch.Get "count")}}" class="z-999 fixed flex justify-center top-100 left-0 h-100 w-100 overflow-hidden bg-white trans-all">
-        <figure class="mt5 mh2 mh6-ns">
+        <figure class="mt5 mb2 mh2 mh6-ns">
           <img src="{{.Permalink}}" class="db center mxhi-75">
           {{ $.Scratch.Set "title" .Title }}
           {{ with .Params }}
@@ -84,7 +84,7 @@
       </style>
       <input type="checkbox" id="light-box-{{($.Scratch.Get "count")}}" class="dn">
       <section id="light-box-slide-{{($.Scratch.Get "count")}}" class="z-999 fixed flex justify-center top-100 left-0 h-100 w-100 overflow-hidden bg-white trans-all">
-        <figure class="mt5 mh2 mh6-ns">
+        <figure class="mt5 mb2 mh2 mh6-ns">
           <img src="{{.Permalink}}" class="db center mxhi-75">
           {{ $.Scratch.Set "title" .Title }}
           {{ with .Params }}
