fix footer link

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,6 +3,6 @@
     <li class="dib mh2 f7 fw4 ttu tracked"><a href="tel:14432520324" class="link black-30 hover-dark-red">+1 443 252 0324</a></li>
     <li class="dib mh2 f7 fw4 ttu tracked"><a href="mailto:info@cdox.cc" class="link black-30 hover-dark-red">Contact</a></li>
     <li class="dib mh2 f7 fw4 ttu tracked"><a href="https://cdox.ltd/news/" class="link black-30 hover-dark-red">News</a></li>
-    <li class="dib mh2 f7 fw4 ttu tracked"><a href="cdox.ltd" class="link black-30 hover-dark-red">Canned Ox</a></li>
+    <li class="dib mh2 f7 fw4 ttu tracked"><a href="https://cdox.ltd" class="link black-30 hover-dark-red">Canned Ox</a></li>
   </ul>
 </footer>
