--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -160,6 +160,33 @@
   transform: rotate(-45deg);
 }
 
+.close-dark{
+  position: absolute;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  overflow: hidden;
+}
+
+.close-dark::before, .close-dark::after{
+  content: '';
+  position: absolute;
+  height: 1px;
+  width: 100%;
+  top: 50%;
+  left: 0;
+  margin-top: -1px;
+  background: rgba(255,255,255, 0.5);
+}
+
+.close-dark::before{
+  transform: rotate(45deg);
+}
+
+.close-dark::after{
+  transform: rotate(-45deg);
+}
+
 .fancy::before{
   content: '';
   position: absolute;
@@ -168,6 +195,17 @@
   transform: translateY(-50%);
   height: 2px;
   background-color: black;
+  width: 100%;
+}
+
+.fancy-dark::before{
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 2px;
+  background-color: white;
   width: 100%;
 }
 
