--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,8 +13,29 @@
   {{ else }}
     {{ $.Scratch.Set "img" .Params.image }}
   {{ end }}
-  <section class="vh-100 overflow-hidden flex justify-end bg-cover bg-top bg-black white" style="background-image: url({{ ($.Scratch.Get "img") }});">
-    {{ partial "nav" . }}
+  <section class="relative flex items-center justify-center overflow-x-hidden vh-100 bg-near-black">
+    <aside class="black absolute w-100 lh-solid tracked ttu tc">
+      <h3 class="f-bg-vw fw9"><span class="tracked-tight fw5">Canned</span><span class="fw9">Ox</span><br>Design</h3>
+    </aside>
+    <div class="absolute w-100 flex justify-end">
+    <article class="w-100 w-60-ns pa5 flex flex-column white">
+      <header class="w-100">
+        <h1 class="mt0 mb0 f3 fw6 tracked lh-solid ttu"><a href="/" class="link white"><span class="tracked-tight fw2">Canned </span>OX</a></h1>
+        <h2 class="mt0 f3 fw6 tracked lh-solid ttu white">Design</h2>
+      </header>
+      <h3 class="mt0 mb3 f5 fw6 tracked lh-solid ttu">Woman's Fashion &amp Accesories</h3>
+      <div class="f7 fw3 lh-copy measure">
+        {{ .Content }}
+      </div>
+      <div class="w-70 relative flex items-center justify-end mt5">
+        <div class="absolute w-100 bt"></div>
+        <h2 class="absolute mv0 pl4 f7 fw3 ttu tc lh-solid bg-black">R W Boyer</h2>
+      </div>    
+    </article>
+    </div>
+  </section>
+  <section class="vh-100 overflow-hidden flex justify-end bg-cover bg-top bg-black white" style="background-image: linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0, 0.7)), url({{ ($.Scratch.Get "img") }});">
+    {{/* partial "nav" . */}}
     <article class="w-70 flex justify-center items-end mb6">
       <header class="lh-title tc">
         <h2 class="mv0 f2 fw3 tracked-tight ttu">Chapter 1</h2>
