--- a/layouts/index.html
+++ b/layouts/index.html
@@ -27,19 +27,30 @@
       <div class="f7 fw3 lh-copy measure">
         {{ .Content }}
       </div>
-      <div class="w-70 relative flex items-center justify-end mt5">
-        <div class="absolute w-100 bt"></div>
-        <h2 class="absolute mv0 pl4 f7 fw3 ttu tc lh-solid bg-black">R W Boyer</h2>
-      </div>    
     </article>
     </div>
   </section>
-  <section class="vh-100 overflow-hidden flex justify-end bg-cover bg-top bg-black white" style="background-image: linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0, 0.7)), url({{ ($.Scratch.Get "img") }});">
+  <section class="relative vh-100 overflow-hidden flex items-center justify-center bg-cover bg-top bg-black white" style="background-image: linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0, 0.7)), url({{ ($.Scratch.Get "img") }});">
     {{/* partial "nav" . */}}
-    <article class="w-70 flex justify-center items-end mb6">
+    <aside class="white-10 absolute w-100 lh-solid tracked ttu tc">
+      <h3 class="f-bg-vw fw9"><span class="fw9">Coming</span><br>Soon</h3>
+    </aside>
+    <article class="absolute w-70 flex justify-center items-end mb6">
       <header class="lh-title tc">
-        <h2 class="mv0 f2 fw3 tracked-tight ttu">Chapter 1</h2>
-        <h1 class="mv0 f1 fw5 tracked ttu">Marilyn And &numero;5</h1>
+        <h2 class="mv0 f2 fw3 tracked ttu">Chapter &numero;1</h2>
+        <h1 class="mv0 f1 fw5 tracked ttu">Collars &amp; Neck Pieces</h1>
+      </header>
+    </article>
+  </section>
+  <section class="relative vh-100 overflow-hidden flex items-center justify-center bg-cover bg-center bg-black white" style="background-image: linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0, 0.7)), url('/images/099A8474.jpg');">
+    {{/* partial "nav" . */}}
+    <aside class="white-10 absolute w-100 lh-solid tracked ttu tc">
+      <h3 class="f-bg-vw fw9"><span class="fw9">Coming</span><br>Soon</h3>
+    </aside>
+    <article class="absolute w-70 flex justify-center items-end mb6">
+      <header class="lh-title tc">
+        <h2 class="mv0 f2 fw3 tracked ttu">Chapter &numero;2</h2>
+        <h1 class="mv0 f1 fw5 tracked ttu">Tops, Corsets, &amp; Waist Cinchers</h1>
       </header>
     </article>
   </section>
