--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,33 +24,33 @@
         <h2 class="mt0 f3 fw6 tracked lh-solid ttu white">Design</h2>
       </header>
       <h3 class="mt0 mb3 f5 fw6 tracked lh-solid ttu">Woman's Fashion &amp Accesories</h3>
-      <div class="f7 fw3 lh-copy measure">
+      <div class="f5 f7-ns fw3 lh-copy measure">
         {{ .Content }}
       </div>
     </article>
     </div>
   </section>
-  <section class="relative vh-100 overflow-hidden flex items-center justify-center bg-cover bg-top bg-black white" style="background-image: linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0, 0.7)), url({{ ($.Scratch.Get "img") }});">
+  <section class="relative vh-100 overflow-hidden flex items-center justify-center cover bg-top bg-black white" style="background-image: linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0, 0.7)), url({{ ($.Scratch.Get "img") }});">
     {{/* partial "nav" . */}}
-    <aside class="white-10 absolute w-100 lh-solid tracked ttu tc">
+    <aside class="white-20 absolute w-100 lh-solid tracked ttu tc">
       <h3 class="f-bg-vw fw9"><span class="fw9">Coming</span><br>Soon</h3>
     </aside>
-    <article class="absolute w-70 flex justify-center items-end mb6">
+    <article class="absolute w-90 w-70-ns flex justify-center items-end">
       <header class="lh-title tc">
         <h2 class="mv0 f2 fw3 tracked ttu">Chapter &numero;1</h2>
-        <h1 class="mv0 f1 fw5 tracked ttu">Collars &amp; Neck Pieces</h1>
+        <h1 class="mt7 mt5-ns mb0 f3 f1-ns fw5 tracked ttu">Collars <span class="f2-ns">&amp;</span> Neck Pieces</h1>
       </header>
     </article>
   </section>
-  <section class="relative vh-100 overflow-hidden flex items-center justify-center bg-cover bg-center bg-black white" style="background-image: linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0, 0.7)), url('/images/099A8474.jpg');">
+  <section class="relative vh-100 overflow-hidden flex items-center justify-center cover bg-center bg-black white" style="background-image: linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0, 0.7)), url('/images/099A8474.jpg');">
     {{/* partial "nav" . */}}
-    <aside class="white-10 absolute w-100 lh-solid tracked ttu tc">
+    <aside class="white-20 absolute w-100 lh-solid tracked ttu tc">
       <h3 class="f-bg-vw fw9"><span class="fw9">Coming</span><br>Soon</h3>
     </aside>
-    <article class="absolute w-70 flex justify-center items-end mb6">
+    <article class="absolute w-90 w-70-ns flex justify-center items-end mb6">
       <header class="lh-title tc">
         <h2 class="mv0 f2 fw3 tracked ttu">Chapter &numero;2</h2>
-        <h1 class="mv0 f1 fw5 tracked ttu">Tops, Corsets, &amp; Waist Cinchers</h1>
+        <h1 class="mt7 mt5-ns mb0 f3 f1-ns fw5 tracked ttu">Tops, Corsets, <span class="f2-ns">&amp;</span> Waist Cinchers</h1>
       </header>
     </article>
   </section>
